# gh-agent

./: Cargo.toml  README.md
.github/workflows/: release.yml
skill/: SKILL.md
src/: cli.rs  commands.rs  diff.rs  format.rs  github.rs  main.rs  search.rs  sem.rs
